--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="speech hi">Xin chào,</div>
             <div class="speech ten">mình là Cửu Tuấn</div>
             <div class="speech it">
-              sinh viên ngành công nghệ thông tin trường HUSC
+              sinh viên ngành công nghệ thông tin trường husc
             </div>
             <div class="speech slogan">“Happiness depends upon ourselves”</div>
             <div class="speech tt">6.5 IELTS | HSK 5</div>
